tree-sitter-wit/test/corpus/use-with-alias.txt
==============
Use with alias
==============

package local:demo;

use wasi:http/types as http-types;
use wasi:http/handler as http-handler;

---

(source_file
  (package_decl
    (fully_qualified_package_name
      (package_name
        (identifier))
      (package_path
        (identifier))))
  (top_level_item
    (top_level_use_item
      (use_path
        (fully_qualified_use_path
          (package_name
            (identifier))
          (package_path
            (identifier)
            (identifier))))
      (identifier)))
  (top_level_item
    (top_level_use_item
      (use_path
        (fully_qualified_use_path
          (package_name
            (identifier))
          (package_path
            (identifier)
            (identifier))))
      (identifier))))
